[gd_scene load_steps=10 format=3 uid="uid://cq8g4rbaay25f"]

[ext_resource type="Script" path="res://scenes/game_over_dialog.gd" id="1_hx0ak"]
[ext_resource type="Texture2D" uid="uid://cgx66km3tckom" path="res://assets/upgrades/currency.png" id="2_2bufa"]
[ext_resource type="Texture2D" uid="uid://b7pbp133gaebj" path="res://assets/UI/BackgroundPanel.png" id="2_451r5"]
[ext_resource type="Theme" uid="uid://dulka0cj4fq56" path="res://main_theme.tres" id="3_sby1s"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_yy3wm"]
texture = ExtResource("2_451r5")
texture_margin_left = 20.0
texture_margin_top = 20.0
texture_margin_right = 20.0
texture_margin_bottom = 20.0
region_rect = Rect2(0, 0, 400, 400)

[sub_resource type="Theme" id="Theme_gakoa"]
PanelContainer/styles/panel = SubResource("StyleBoxTexture_yy3wm")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_etb6c"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f4bb0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ydpgy"]

[node name="GameOverDialog" type="CanvasLayer"]
script = ExtResource("1_hx0ak")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = -1
anchor_left = 0.15
anchor_top = 0.5
anchor_right = 0.85
anchor_bottom = 0.5
grow_horizontal = 2
theme = SubResource("Theme_gakoa")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme = ExtResource("3_sby1s")
theme_override_constants/separation = 10

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 30
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxReward" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Amount" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxReward"]
unique_name_in_owner = true
layout_mode = 2
text = "+ 0"
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxReward"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
texture = ExtResource("2_2bufa")
expand_mode = 3

[node name="PanelContinue" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Continue" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContinue"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_etb6c")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_etb6c")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_etb6c")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_etb6c")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_etb6c")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_etb6c")
theme_override_styles/hover = SubResource("StyleBoxEmpty_etb6c")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_etb6c")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_etb6c")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_etb6c")
theme_override_styles/normal = SubResource("StyleBoxEmpty_etb6c")
text = "Continue (Watch Ad)"

[node name="PanelRestart" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Restart" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/PanelRestart"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_f4bb0")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_f4bb0")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_f4bb0")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_f4bb0")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_f4bb0")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_f4bb0")
theme_override_styles/hover = SubResource("StyleBoxEmpty_f4bb0")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_f4bb0")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_f4bb0")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_f4bb0")
theme_override_styles/normal = SubResource("StyleBoxEmpty_f4bb0")
text = "Restart"

[node name="PanelEnd" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="End" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/PanelEnd"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_ydpgy")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_ydpgy")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ydpgy")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_ydpgy")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_ydpgy")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_ydpgy")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ydpgy")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_ydpgy")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ydpgy")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_ydpgy")
theme_override_styles/normal = SubResource("StyleBoxEmpty_ydpgy")
text = "Main Menu"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/PanelContinue/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/PanelRestart/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/PanelEnd/End" to="." method="_on_end_pressed"]
